tests/ui/suggestions/no-method-over-suggestion-on-elem-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/no-method-over-suggestion-on-elem-mismatch.rs:9:9
   |
LL |     foo(&a);
   |     --- ^^ expected `&[u16]`, found `&Vec<u8>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&[u16]`
              found reference `&Vec<u8>`
note: function defined here
  --> $DIR/no-method-over-suggestion-on-elem-mismatch.rs:5:4
   |
LL | fn foo(b: &[u16]) {}
   |    ^^^ ---------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
